name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Miso.Component
                     , Miso.Clean
                     , Miso.Component.Many
                     , Miso.Component.Map
                     , Miso.Component.CleanMap
                     , Timer
  build-depends:       base
                     , containers
                     , miso
                     , time
                     , lens

  default-language:    Haskell2010


executable app-exe
  main-is:             Main.hs
  build-depends:       base
                     , app
                     , containers
                     , miso
                     , time
                     , lens
  default-language:    Haskell2010