name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Miso.Component
                     , Miso.Concise
                     , Miso.Concise.Many
                     , Miso.Component.Map
                     , Miso.Concise.Map
                     , Miso.Component.Lens
  build-depends:       base
                     , containers
                     , miso
                     , time
                     , lens

  default-language:    Haskell2010


executable app-exe
  main-is:             Main.hs
  build-depends:       base
                     , app
                     , containers
                     , miso
                     , time
                     , lens
  default-language:    Haskell2010