name:                miso-component
version:             0.1.0.0
synopsis:            easy components for miso
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Miso.Component
                     , Miso.Concise
                     , Miso.Concise.Many
                     , Miso.Component.Map
                     , Miso.Concise.Map
                     , Miso.Component.Lens
  build-depends:       base
                     , containers
                     , miso >= 0.7.5.0

  default-language:    Haskell2010